--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,34 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+:root {
+  --colorOne: #D9F4C7;
+  --colorTwo: #00A5CF;
+  --colorThree: #1E2749;
+  --colorFour: #BFACAA;
+  --colorFive: #41E2BA;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  margin: 0;
+  padding: 0;
+  background-color: var(--colorOne);
 }
+
+/* NAVBAR */
+
+.navBar h1 {
+  background-color: var(--colorTwo);
+}
+
+
+/* About */
+
+
+/* Contact */
+
+
+
+/* Portfolio */
+
+
+
+/* Resume */
