updated project descirptions / placeholders for in progress projects

--- a/src/index.css
+++ b/src/index.css
@@ -95,7 +95,9 @@
 }
 
 /* Portfolio  ================================================= */
-
+.projectCard div {
+  display: inline-block;
+}
 
 
 /* Resume  ================================================= */
